2006-08-09 Jesus Calvino-Fraga <jesusc at ece.ubc.ca>

	* device/include/mcs51/cc2510fx.h: added
	* src/z80/z80.dsp, src/gbz80/gbz80.dsp: added support/Util/strcmpi.ch
	  to projects.

2006-08-09 Maarten Brock <sourceforge.brock AT dse.nl>

	* as/z80/assym.c (mlookup): ignore case when looking up mnemonics
	* as/z80/Makefile.in: added strcmpi.c
	* as/z80/z80adr.c: added upper case registers and lower case conditionals
	* support/Util/strcmpi.ch: added with intention to remove from mcs51/hc08

2006-08-08 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/gbz80/asm_strings.s,
	* device/lib/gbz80/crt0_rle.s,
	* device/lib/gbz80/div.s,
	* device/lib/gbz80/mul.s,
	* device/lib/gbz80/shift.s,
	* device/lib/z80/asm_strings.s,
	* device/lib/z80/crt0_rle.s,
	* device/lib/z80/div.s,
	* device/lib/z80/mul.s,
	* device/lib/z80/shift.s: changed to all lower case menmonics except the
	  flags which are all upper case

2006-08-07 Maarten Brock <sourceforge.brock AT dse.nl>

	* as/z80/asm.h: made CASE_SENSITIVE 1
	* link/z80/aslink.h: made CASE_SENSITIVE 1
	* src/z80/gen.c (throughout): made all conditionals upper case
	* support/regression/tests/bug1503067.c: new

2006-08-07 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/z80/gen.c (aopPut): fixed bug !*ixy should be !*iyx,
	  (shiftIntoPair): added case 2 for PAIR_IY,
	  (setupToPreserveCarry): replaced parameters with iCode and check if
	   PAIR_DE is in use to fix bug 1399290,
	  (genPlus, genMinus): updated call to setupToPreserveCarry
	* support/regression/tests/bug1399290.c: new

2006-08-06 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/Makefile.in (Z80SOURCES): enabled float support
	* sim/ucsim/z80.src/inst.cc (inst_rst): generate breakpoint on RST8,ACC==0
	* src/ds390/gen.c (shiftRLong),
	* src/hc08/gen.c (shiftLLong, shiftRLong): fixed bug 1533966
	* src/mcs51/gen.c (sameReg): changed to sameByte,
	  (xch_a_aopGet): new,
	  (shiftL2Left2Result, shiftR2Left2Result, shiftRLeftOrResult, shiftLLong,